# PRAG-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.dev.md  README.md  TESTING.md  TEST_RESULTS.md  claude.md  config.yaml  docker-compose.yml  index.html  pyproject.toml  test_real_pdf.py  verify-setup.sh
.github/actions/setup-python-cached/: action.yml
.github/workflows/: ci.yml  citation-check.yml  deploy.yml  link-check.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: collections.py  compare.py  health.py  ingest.py  papers.py  pipeline.py  preprocess.py  prompts.py  query.py  rag.py  settings.py  summarize.py  zotero.py
backend/app/core/: config.py
backend/app/models/: collection.py  paper.py  query.py  rag.py
backend/app/services/: anthropic_service.py  api_keys_service.py  chunking_service.py  citation_service.py  collection_service.py  docling_service.py  google_service.py  huggingface_service.py  huggingface_vlm_converter.py  ingestion_service.py  metadata_service.py  ollama_service.py  ollama_vlm_converter.py  paper_metadata_api_service.py  paper_service.py  pdf_converter_base.py  pdf_processor.py  preprocessing_service.py  prompt_service.py  pymupdf4llm_service.py  qdrant_service.py  sparse_embedding_service.py  zotero_service.py
backend/prompts/compare/: default.yaml
backend/prompts/rag/: default.yaml  small_llm.yaml
backend/prompts/summarize/: default.yaml
backend/prompts/vlm_extract/: default.yaml  invoice.yaml
backend/prompts/vlm_metadata/: default.yaml  invoice.yaml
docs/: HF-models-recommended.md  api-reference.rst  architecture.md  conf.py  contributing.md  index.md  user-guide.md
docs/design/: prag-architecture.md  prag-data-storage.md  prag-security-analysis.md  prag-tech-stack.md  zotero-integration-methods.md
docs/plans/: 2026-02-09-prag-v2-implementation.md  2026-02-20-pdf-converter-extraction-design.md  2026-02-20-pdf-converter-extraction.md  2026-02-27-vue-frontend-design.md  2026-02-27-vue-frontend-implementation.md  2026-04-23-semantic-chunk-classification.md
docs/superpowers/plans/: 2026-02-09-prag-v2-design.md  2026-03-11-pdf-batch-convert-metadata.md  2026-03-20-one-click-pipeline.md  2026-03-20-zotero-integration.md  2026-03-24-langchain-prompt-system.md  2026-03-24-rag-advanced-options.md
docs/superpowers/specs/: 2026-03-11-pdf-batch-convert-metadata-design.md  2026-03-20-one-click-pipeline-design.md  2026-03-20-zotero-integration-design.md  2026-03-23-langchain-prompt-system-design.md  2026-03-24-rag-advanced-options-design.md
frontend/: Dockerfile  app.py  helpers.py  sidebar.py  tab_collections.py  tab_compare.py  tab_explore.py  tab_preprocessing.py  tab_rag.py
frontend-web/: index.html
frontend-web/css/: style.css
frontend-web/js/: app.js  backend-client.js  collections-tab.js  compare-tab.js  explore-tab.js  file-picker-panel.js  pdf-tab.js  pipeline-panel.js  prompt-selector.js  rag-tab.js  zotero-import-panel.js
frontend-web/js/components/: settings-panel.js
frontend-web/js/components/collections/: file-picker-panel.js
frontend-web/js/components/pdf/: file-metadata-panel.js  pipeline-panel.js  upload-panel.js  zotero-import-panel.js
frontend-web/js/components/shared/: prompt-selector.js
frontend-web/js/tabs/: tab-collections.js  tab-compare.js  tab-explore.js  tab-pdf.js  tab-rag.js
js/: explore-tab.js  prompt-selector.js
js/components/pdf/: zotero-import-panel.js
js/tabs/: tab-pdf.js
tests/: conftest.py
tests/integration/: test_collections_api.py  test_compare_api.py  test_health_api.py  test_ingest_api.py  test_pdf_processing.py  test_pipeline_api.py  test_preprocess_api.py  test_prompts_api.py  test_query_api.py  test_settings_api.py  test_summarize_api.py  test_upload_api.py  test_zotero_api.py
tests/unit/: test_anthropic_service.py  test_chunking_service.py  test_citation_service.py  test_config.py  test_docling_service.py  test_google_service.py  test_huggingface_service.py  test_huggingface_vlm_converter.py  test_ingestion_service.py  test_metadata_service.py  test_models.py  test_ollama_service.py  test_ollama_vlm_converter.py  test_pdf_converter_base.py  test_pdf_processor.py  test_preprocessing_service.py  test_prompt_service.py  test_pymupdf4llm_service.py  test_qdrant_service.py  test_rag_huggingface.py  test_sparse_embedding_service.py  test_zotero_service.py
