[project]
name = "prag-v2"
version = "0.1.0"
description = "RAG system for academic research papers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "qdrant-client>=1.7.0",
    "docling>=2.74.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "ollama>=0.1.0",
    "fastembed>=0.4.0",
    "pymupdf4llm>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]
api = [
    "anthropic>=0.18.0",
    "google-genai>=1.64.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — handled by ruff format where possible; remaining are in string literals
    "B008",   # Depends() in function defaults — intentional FastAPI pattern
    "B904",   # raise-without-from — HTTPException re-raises are intentional
    "UP042",  # StrEnum migration — requires unsafe fix; deferred to avoid MRO change
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E402", "F841"]
"test_real_pdf.py" = ["E402", "F841"]

[tool.coverage.run]
source = ["backend"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/.venv*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
]
